Fix Alertify z-index issue.

--- a/client/scss/views/_nav.scss
+++ b/client/scss/views/_nav.scss
@@ -4,3 +4,6 @@
     padding: inherit;
   }
 } */
+
+/* overwrite display: none; for everything except IE6-8 */
+:root *> .alertify-hidden { visibility: hidden; }
